Fix:some css font and alignment

--- a/styles.css
+++ b/styles.css
@@ -85,11 +85,11 @@ transition: 0.3s;
     position: absolute;
     bottom: 0;
     left: 0;
-    padding: 25px;
+    padding: 38px;
     width: 100%;
     height: 20%;
-    font-size: 16px;
-    font-weight: 500;
+    font-size: 24px;
+    font-weight: 700;
     color: #fff;
     opacity: 0;
     border-radius: 0 0 10px 10px;
